--- a/docker/nginx-prometheus/nginx-prometheus-exporter-1.sv.conf.template
+++ b/docker/nginx-prometheus/nginx-prometheus-exporter-1.sv.conf.template
@@ -1,5 +1,5 @@
 [program:nginx-prometheus-exporter-1]
-command=/opt/nginx/nginx-prometheus-exporter-0.9.0/nginx-prometheus-exporter -nginx.scrape-uri=http://localhost:8880/basic_status
+command=/usr/bin/bash -c "(export LISTEN_ADDRESS=:9113; /opt/nginx/nginx-prometheus-exporter-0.9.0/nginx-prometheus-exporter -nginx.scrape-uri=http://localhost:8800/basic_status)"
 process_name=%(program_name)s_%(process_num)02d
 autostart=true
 autorestart=true
